# teststack

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  CODE_OF_CONDUCT.md  Dockerfile.j2  Makefile  README.rst  codecov.yml  pyproject.toml  setup.cfg  teststack.local.toml  teststack.toml  tox.ini
.github/workflows/: codeql-analysis.yml  publish.yml  tests.yml
docs/: conf.py  config.rst  index.rst  usage.rst
docs/commands/: containers.rst  environment.rst  index.rst
docs/containers/: docker.rst  index.rst  podman.rst
src/teststack/: __init__.py  __main__.py  config.py  errors.py  git.py  utils.py
src/teststack/commands/: containers.py  env.py  environment.py  test.py
src/teststack/configuration/: __init__.py  service.py  tests.py
src/teststack/containers/: __init__.py  docker.py  podman.py
tests/: conftest.py  teststack.podman.toml
tests/files/: build.output  testapp.tar
tests/integration/: test_containers.py  test_env.py
tests/redis/: Dockerfile
tests/testapp/: Dockerfile  Dockerfile.j2  pyproject.toml  teststack.toml  wsgi.py
tests/testapp/app/: application.py  config.py  database.py
tests/testapp/app/handlers/v1/: __init__.py  health.py
tests/testapp/tests/: conftest.py
tests/testapp/tests/unit/: test_health.py
tests/unit/: test_cli.py  test_command_containers.py  test_command_env.py  test_git.py  test_tests.py
