[metadata]
name = teststack
description = Manage the infrastructure for running tests against
long_description = file: README.rst
author = Daniel Wallace
author_email = daniel@gtmanfred.com
license = APACHE-2.0
home_page = https://github.com/gtmanfred/teststack
project_urls =
    repository = https://github.com/gtmanfred/teststack
classifiers =
    Development Status :: 2 - Pre-Alpha
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find_namespace:
package_dir=
    =src
setup_requires =
  setuptools_scm
install_requires =
    docker
    six  # needed by docker
    click
    toml
    jinja2
    GitPython
	backports.entry-points-selectable
python_requires = >=3.6
zip_safe = false

[options.entry_points]
console_scripts =
    teststack = teststack:main
teststack.commands =
    containers = teststack.commands.containers
    environment = teststack.commands.environment
teststack.clients =
    docker = teststack.containers.docker

[options.packages.find]
where=src

[options.extras_require]
tests =
    coverage[toml]>=5.4
    pytest
    pytest-pdb
syntax =
    black
dev =
    tox
