[tool.poetry]
name = "app"
version = "0.1.0"
description = "test app for teststack"
authors = ["Daniel Wallace <daniel@gtmanfred.com>"]
license = "APACHE-2.0"

[tool.poetry.dependencies]
python = "^3.8"
Flask-SQLAlchemy = "^3.1.1"
figenv = "^1.0.1"
SQLAlchemy = {extras = ["postgresql-psycopg2binary"], version = "^2.0.22"}
Flask-Caching = "^2.1.0"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
pytest = "^7.4.3"

[tool.coverage.run]
branch = true
omit = ["tests/"]
source = ["app"]

[tool.coverage.paths]
source = ["."]

[tool.coverage.report]
skip_covered = false

[tool.coverage.xml]
output = "coverage.xml"

[tool.pytest.ini_options]
addopts = "-ra"
log_cli_level = "critical"
junit_family = "xunit2"
testpaths = "tests/"
norecursedirs = ".git .tox"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
